Helm-Chart/files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-sovkombank
spec:
  selector:
    app: nginx-app-sovkombank
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
