Helm-Chart/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-sovkombank
spec:
  tls:
  - hosts:
      - test.ifconfig.io
  ingressClassName: nginx
  rules:
    - host: test.ifconfig.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service-sovkombank
                port:
                  number: 443
